Fix deprecated calls in Java codebase